Partially squished bug 6.

--- a/Coding/Stylesheets/mss.css
+++ b/Coding/Stylesheets/mss.css
@@ -5,7 +5,7 @@ html {
 body {
   font-family: Helvetica; 
   font-size: 12pt;
-  width: 90%;
+  width: 100%;
   height: 100%;
   overflow: hidden;
   background-color: white;
@@ -15,7 +15,7 @@ body {
 
 #left-panel {
   float: left;
-  width: 60%;
+  width: 50%;
   height: 100%;
   overflow: auto;
 }
@@ -24,6 +24,7 @@ body {
   height: 100%;
   overflow: auto;
   padding: 20px;
+  padding-bottom: 100px;
 }
 
 #headerInformation, #diplomaticTranscription, #semiDiplomaticTranscription {
